# syno-download-station

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: cli.rs
requests/: synology.http
src/: client.rs  entities.rs  lib.rs  utils.rs
test-files/: api_error.json  auth_error.json  complete_success.json  create_task_from_file_success.json  create_task_success.json  delete_task_success.json  get_task_success.json  get_tasks_success.json  login_success.json  session_expired.json  test.torrent
tests/: client.rs  utils.rs
